- Fix Instance Failure High Contrast Mode (#2944)

--- a/src/DetailsView/components/failure-instance-panel.scss
+++ b/src/DetailsView/components/failure-instance-panel.scss
@@ -59,4 +59,7 @@
     font-size: 16px !important;
     line-height: 24px !important;
     color: $neutral-100 !important;
+    @media screen and (-ms-high-contrast: active) {
+        color: inherit !important;
+    }
 }
